# fastapi-sandbox

./: .env.example  .gitignore  db.py  main.py  models.py  pyproject.toml
app/: config.py  database.py  main.py
app/api/: __init__.py  items.py  jobs.py
app/models/: __init__.py  cache.py  item.py  job.py  rakuten_candidate.py  timeseries.py
app/schemas/: __init__.py  item.py  job.py
app/services/: __init__.py  calculator.py  item_service.py  job_service.py  keepa.py  rakuten.py  sp_api.py
app/templates/: base.html
app/templates/items/: detail.html  list.html
app/templates/jobs/: create.html  detail.html  list.html
app/workers/: tasks.py
ddl/: 001_create_tables.sql
docs/: 01_システム設計書.md  02_DB設計書.md  03_画面設計書.md  04_環境構築手順書.md
static/css/: style.css
